# server_game_cpp

./: .gitignore  CMakeLists.txt  README.md  buildDebug.sh  buildRelease.sh  install.sh  run.sh
certs/: san.cnf  server.crt  server.key
src/: .env  server.cpp
src/AsioService/: AsioService.cpp  AsioService.h
src/Coroutine/: Task.h
src/Database/Postgres/: PostgresClient.cpp  PostgresClient.h
src/Database/Redis/: RedisClient.cpp  RedisClient.h
src/Init/: Init.cpp  Init.h
src/Message/: ClientContext.h  MessageDispatcher.h  MessageHandler.h
src/QuicServer/: QuicServer.cpp  QuicServer.h
src/core/: gameplay.cpp  gameplay.h
src/database/postgres/: config.json  postgresClient.cpp  postgresClient.h
src/database/redis/: redisClient.cpp  redisClient.h
src/init/: init.cpp  init.h
src/message/: messageDispatcher.h  messageHandler.h
src/quicServer/: quicServer.cpp  quicServer.h
src/service/managerService/: managerService.cpp  managerService.h
src/service/map/: mapService.cpp
src/service/user/userManager/: userManager.cpp  userManager.h
src/service/user/userService/: userService.cpp  userService.h
